--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
-services:
   # Backend API
   - type: web
     name: stitchnet-backend
     runtime: node
+    rootDirectory: backend
     plan: free
     buildCommand: npm install
     startCommand: node server.js
@@ -22,6 +22,8 @@ services:
   - type: web
     name: stitchnet-frontend
     runtime: static
+    rootDirectory: frontend
+    plan: free
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
     envVars:
