--- a/render.yaml
+++ b/render.yaml
@@ -26,12 +26,13 @@ services:
     rootDir: frontend
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: VITE_API_URL
-        fromService:
-          type: web
-          name: stitchnet-backend
-          property: host
+        value: https://stitchnet-backend.onrender.com/api
 
 databases:
   - name: stitchnet-db
